# delta-farmer

./: .gitignore  LICENSE  Makefile  pyproject.toml  readme.md
.github/workflows/: lint.yml
apps/omni/: __main__.py  client.py  config.py  manager.py
apps/pacifica/: __main__.py  client.py  config.py  manager.py  report.py
configs.example/: omni.toml  pacifica.toml
core/: __init__.py  cli.py  crypto.py  decorators.py  http.py  logger.py  models.py  store.py  table.py  utils.py
