[project]
name = "delta-farmer"
version = "0.2.0"
description = "Automated delta-neutral trading for crypto points farming across perpetual DEXs"
readme = "readme.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "vladkens" }]
keywords = ["crypto", "trading", "delta-neutral", "perpdex"]
dependencies = [
    "base58>=2.1.1",
    "cryptography>=44.0.0",
    "curl-cffi>=0.14.0",
    "filelock>=3.24.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "solders>=0.27.1",
    "web3>=7.14.1",
]

[dependency-groups]
lint = ["pyright>=1.1.408", "ruff>=0.15.1"]

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["apps", "core"]
